[package]
name = "usab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# features = [] imports non default features of a crate, which are 
#   what is displayed when cargo add is ran

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.4", features = ["cargo"] }
serde = { version = "1.0.200", features = ["derive"] }
tide = "0.16.0"
